--- a/style.css
+++ b/style.css
@@ -65,10 +65,10 @@ body {
 .logo a {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     text-decoration: none;
     color: var(--primary-color);
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     transition: all 0.3s ease;
     position: relative;
@@ -2617,3 +2617,37 @@ color: #ffffff;
     
     padding: 100px 0;
 }
+.view-products-btn {
+    position: fixed;
+    top: 85px;
+    right: 25px;
+    background: linear-gradient(135deg, #007BFF, #00C6FF);
+    color: white;
+    border: none;
+    outline: none;
+    padding: 14px 20px;
+    font-size: 16px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    cursor: pointer;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: all 0.3s ease;
+  }
+  .view-products-btn a{
+    text-decoration: none;
+    color: whitesmoke;
+  }
+  
+  .view-products-btn:hover {
+    transform: scale(1.07);
+    box-shadow: 0 6px 14px rgba(0,0,0,0.3);
+    background: linear-gradient(135deg, #0056D2, #0099FF);
+  }
+  
+  .view-products-btn i {
+    font-size: 18px;
+  }
+  
